--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 #All Variables Are Required
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "7044550431:AAH3mw_Z6UAEf10LqdklFvR5ho_TCtLRnX0"
+TELEGRAM_API = "1917094"
+TELEGRAM_HASH = "43dbeb43f27f99752b44db7493bf38ad"
 FSUB_ID = ""
 DUMP_CHAT_ID = ""
