--- a/config.env
+++ b/config.env
@@ -2,5 +2,5 @@
 BOT_TOKEN = "7044550431:AAH3mw_Z6UAEf10LqdklFvR5ho_TCtLRnX0"
 TELEGRAM_API = "1917094"
 TELEGRAM_HASH = "43dbeb43f27f99752b44db7493bf38ad"
-FSUB_ID = ""
-DUMP_CHAT_ID = ""
+FSUB_ID = "-1002051607559"
+DUMP_CHAT_ID = "-1002242273919"
